<resources>
	<string name="toast_wallet_reset">Wallet was reset,\nwill take some time to recover</string>
	<string name="wallet_disclaimer_fragment_remind_safety">Use at your own risk. Read the &lt;u>safety notes&lt;/u>.</string>
	<string name="wallet_disclaimer_fragment_remind_backup">You need to &lt;u>back up your wallet&lt;/u>!</string>
	<string name="blockchain_state_progress_hours">%1$s, %2$d hours behind</string>
	<string name="blockchain_state_progress_days">%1$s, %2$d days behind</string>
	<string name="blockchain_state_progress_weeks">%1$s, %2$d weeks behind</string>
	<string name="blockchain_state_progress_months">%1$s, %2$d months behind</string>
	<string name="blockchain_state_progress_downloading">Synchronizing with network</string>
	<string name="blockchain_state_progress_stalled">Synchronization stalled</string>
	<string name="blockchain_state_progress_problem_storage">Synchronizing: Storage problem</string>
	<string name="blockchain_state_progress_problem_network">Synchronizing: Network problem</string>
	<string name="wallet_address_fragment_your">Your Litecoin Address:</string>
	<string name="wallet_address_fragment_clipboard_msg">Litecoin address copied to clipboard</string>
	<string name="wallet_addresses_fragment_add_dialog_title">Add Litecoin address</string>
	<string name="wallet_addresses_fragment_add_dialog_message">Litecoin addresses cannot be deleted. Do you want to add a new address to your wallet?</string>
	<string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
	<string name="blockchain_state_replaying">Blockchain replay is in progress.</string>
	<string name="exchange_rates_activity_title">Exchange Rates</string>
	<string name="exchange_rates_fragment_empty_text">Could not load exchange rates</string>
	<string name="exchange_rates_fragment_default">(default)</string>
	<string name="exchange_rates_fragment_rate">rate</string>
	<string name="exchange_rates_fragment_balance">balance</string>
	<string name="exchange_rates_fragment_source">Price fetched from %s</string>
	<string name="exchange_rates_context_set_as_default_title">Set as default foreign currency</string>
	<string name="wallet_transactions_fragment_tab_received">Received</string>
	<string name="wallet_transactions_fragment_tab_all">Both</string>
	<string name="wallet_transactions_fragment_tab_sent">Sent</string>
	<string name="wallet_transactions_fragment_empty_text_received">No Litecoins received so far.</string>
	<string name="wallet_transactions_fragment_empty_text_sent">No Litecoins sent so far.</string>
	<string name="wallet_transactions_fragment_empty_text_howto">How to get Litecoins?\n\nTrade for traditional money,\nsell goods or services or\nearn by working.</string>
	<string name="wallet_transactions_row_warning_backup">Congratulations, you received your first payment! Have you already &lt;u>backed up your wallet&lt;/u>, to protect against loss?</string>
	<string name="wallet_transactions_fragment_coinbase">mined</string>
	<string name="wallet_transactions_fragment_internal">internal</string>
	<string name="wallet_transactions_context_show_qr_title">Show QR code</string>
	<string name="wallet_options_backup">Back up Keys</string>
	<string name="wallet_options_disconnect">Disconnect</string>
	<string name="wallet_options_safety">Safety notes</string>
	<string name="wallet_options_donate">Tip / Donate</string>
	<string name="wallet_donate_address_label">Donation for Litecoin Wallet</string>
	<string name="wallet_low_storage_dialog_title">Internal Device Storage Space Low!</string>
	<string name="wallet_low_storage_dialog_msg">Litecoin Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your Litecoins are at risk!\n\nDo you want to open the Application Manager in order to uninstall unneeded apps?</string>
	<string name="wallet_low_storage_dialog_button_apps">Manage Apps</string>
	<string name="wallet_timeskew_dialog_title">Check your time settings!</string>
	<string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive Litecoins due to this problem.\n\nYou should check and correct your time and timezone settings.</string>
	<string name="wallet_import_keys_dialog_title">Import private keys</string>
	<string name="wallet_import_keys_dialog_message">Pick a private keys import file from external or app-private storage:</string>
	<string name="wallet_import_keys_dialog_file_security_encrypted">password encrypted</string>
	<string name="wallet_import_keys_dialog_file_security_unencrypted">unencrypted</string>
	<string name="wallet_import_keys_dialog_file_security_external">external storage</string>
	<string name="wallet_import_keys_dialog_file_security_internal">app-private storage</string>
	<string name="wallet_import_keys_dialog_file_created_automatic">automatic backup %s</string>
	<string name="wallet_import_keys_dialog_file_created_manual">manually exported %s</string>
	<string name="wallet_import_keys_dialog_button_import">Import</string>
	<string name="wallet_import_keys_dialog_success_imported">%d private keys were imported.</string>
	<string name="wallet_import_keys_dialog_success_existing">%d private keys were not imported, because you already have them in your wallet.</string>
	<string name="wallet_import_keys_dialog_success_reset">You need to reset your blockchain in order to update your balance. Would you like to?</string>
	<string name="wallet_import_keys_dialog_failure">Private keys could not be imported:\n\n%s\n\nBad password?</string>
	<string name="wallet_import_keys_dialog_button_reset_blockchain">Reset</string>
	<string name="wallet_export_keys_dialog_title">Export private keys</string>
	<string name="wallet_export_keys_dialog_message">Your private keys will be encrypted with the chosen password and written to external storage.</string>
	<string name="wallet_export_keys_dialog_button_export">Export</string>
	<string name="wallet_export_keys_dialog_success">Your private keys have been exported to\n\n%s\n\nKeep them safe, and keep your password safe!</string>
	<string name="wallet_export_keys_dialog_failure">Your private keys could not be exported:\n%s</string>
	<string name="wallet_import_export_keys_dialog_password">password</string>
	<string name="wallet_import_export_keys_dialog_show">Show password</string>
	<string name="wallet_import_export_keys_dialog_failure_title">Error</string>
	<string name="wallet_timeskew_dialog_button_settings">Settings</string>
	<string name="wallet_version_dialog_title">A new version is available!</string>
	<string name="wallet_version_dialog_msg">This version fixes important bugs. For details, see the change log on Google Play.</string>
	<string name="wallet_version_dialog_button_market">Google Play</string>
	<string name="wallet_version_dialog_button_binary">Download</string>
	<string name="wallet_old_sdk_dialog_title">Android version is out of date</string>
	<string name="wallet_old_sdk_dialog_message">Chances are that one of the next releases of Litecoin Wallet will not support your device any more. In some cases, it can get difficult to spend coins on this device.\n\nUnless you know what you are doing, it is recommended to move out your coins soon.</string>
	<string name="send_coins_activity_title">Send Litecoins</string>
	<string name="send_coins_fragment_receiving_address_label">Pay to</string>
	<string name="send_coins_fragment_receiving_address_hint">type address or name</string>
	<string name="send_coins_fragment_receiving_address_error">Invalid Litecoin Address!</string>
	<string name="send_coins_fragment_receiving_address_error_cross_network">Cannot use %s address with this wallet!</string>
	<string name="send_coins_fragment_receiving_address_error_cross_network_unknown">Cannot use address of unknown network with this wallet!</string>
	<string name="send_coins_fragment_available_label">Available for spending</string>
	<string name="send_coins_fragment_pending">(LTC %s waiting for confirmation)</string>
	<string name="send_coins_uri_parse_error_title">Invalid Litecoin URI</string>
	<string name="send_coins_parse_address_error_msg">Got invalid litecoin address!\n(Mixing up Testnet/Prodnet?)</string>
	<string name="send_coins_fragment_amount_label">Amount to pay</string>
	<string name="send_coins_fragment_amount_empty">Put amount here</string>
	<string name="send_coins_fragment_amount_error">Invalid amount!</string>
	<string name="send_coins_fragment_bluetooth_enable">Send payment also via Bluetooth</string>
	<string name="send_coins_fragment_bluetooth_ack">Your payment was successfully sent via Bluetooth.</string>
	<string name="send_coins_fragment_bluetooth_nack">Your payment was rejected via Bluetooth.</string>
	<string name="send_coins_fragment_button_send">Send</string>
	<string name="send_coins_fragment_button_back">Back</string>
	<string name="send_coins_preparation_msg">Signing…</string>
	<string name="send_coins_sending_msg">Sending…</string>
	<string name="send_coins_sent_msg">Sent!</string>
	<string name="send_coins_failed_msg">Failed!</string>
	<string name="send_coins_error_msg">Problem sending coins!</string>
    <string name="send_coins_error_desc">There was an error while sending this transaction.\n
        This is probably due to a very small amount which can\'t be spent due to network fees.\n
        Please top up your balance to accommodate fees.\n
        If you want to empty your wallet, use \'Empty Wallet\' in the menu.\n
        If you think this is an error, please use the \'Report Issue\' function.</string>
	<string name="send_coins_options_empty">Empty wallet</string>
	<string name="send_coins_address_context_clear_title">Enter new address</string>
	<string name="request_coins_activity_title">Request Litecoins</string>
	<string name="request_coins_fragment_address_label">Address to request to</string>
	<string name="request_coins_fragment_include_address_label">include label with address</string>
	<string name="request_coins_fragment_amount_label">Requested amount (optional)</string>
	<string name="request_coins_fragment_initiate_request_qr">Have this code scanned by the sender.</string>
	<string name="request_coins_fragment_initiate_request_nfc">Or tap an NFC enabled device.</string>
	<string name="request_coins_fragment_bluetooth_enabled">Accepting payments via Bluetooth.</string>
	<string name="request_coins_clipboard_msg">Litecoin request copied to clipboard</string>
	<string name="request_coins_share_dialog_title">Share request for Litecoins…</string>
	<string name="send_coins_dialog_fee_message">You\'re about to send coins with a low fee. This transaction can take very long to confirm.\n\nIt is advised to use a fee of at least %s.</string>
	<string name="send_coins_dialog_fee_button_send">Send anyway</string>
	<string name="send_coins_dialog_fee_button_adjust">Adjust fee</string>
	<string name="send_coins_dialog_fee_button_dismiss">Don\'t send</string>
	<string name="request_coins_fragment_qr_label">Have this QR-code scanned by the sender:</string>
	<string name="request_coins_fragment_nfc_enabled">Or touch with NFC enabled device.</string>
	<string name="request_coins_options_local_app_title">Request from local app</string>
	<string name="address_book_activity_title">Address Book</string>
	<string name="about_title">About</string>
	<string name="about_license_title">License</string>
	<string name="about_credits_zxing_title">"This app is using 'zxing'"</string>
	<string name="about_credits_icon_title">"This app is using an icon by 'dogecoin'"</string>
	<string name="about_author_twitter_title">Author at Twitter</string>
	<string name="about_author_googleplus_title">Author at Google+</string>
	<string name="about_market_app_title">Google Play Page</string>
	<string name="about_market_app_summary">Review or rate the app</string>
	<string name="about_credits_market_publisher_title">Other Apps of Author</string>
</resources>